// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticConsignment Component renders compact view of static consignment 1`] = `
<div
  class="staticConsignment"
>
  <div
    class="vcard checkout-address--static"
  >
    <p
      class="fn address-entry"
    >
      <span
        class="first-name"
      >
        Test 
      </span>
      <span
        class="family-name"
      >
        Tester
      </span>
    </p>
    <p
      class="address-entry"
    >
      <span
        class="company-name"
      >
        Bigcommerce 
      </span>
      <span
        class="tel"
      >
        555-555-5555
      </span>
    </p>
    <div
      class="adr"
    >
      <p
        class="street-address address-entry"
      >
        <span
          class="address-line-1"
        >
          12345 Testing Way 
        </span>
      </p>
      <p
        class="address-entry"
      >
        <span
          class="locality"
        >
          Some City, 
        </span>
        <span
          class="region"
        >
          California, 
        </span>
        <span
          class="postal-code"
        >
          95555 / 
        </span>
        <span
          class="country-name"
        >
          United States 
        </span>
      </p>
    </div>
  </div>
  <div>
    <div
      class="shippingOption shippingOption--alt shippingOption--selected"
    >
      <div
        class="shippingOption shippingOption--alt"
      >
        <span
          class="shippingOption-desc"
        >
          Flat Rate
        </span>
        <span
          class="shippingOption-price"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StaticConsignment Component renders static consignment with shipping method 1`] = `
<div
  class="staticConsignment"
>
  <div
    class="vcard checkout-address--static"
  >
    <p
      class="fn address-entry"
    >
      <span
        class="first-name"
      >
        Test 
      </span>
      <span
        class="family-name"
      >
        Tester
      </span>
    </p>
    <p
      class="address-entry"
    >
      <span
        class="company-name"
      >
        Bigcommerce 
      </span>
      <span
        class="tel"
      >
        555-555-5555
      </span>
    </p>
    <div
      class="adr"
    >
      <p
        class="street-address address-entry"
      >
        <span
          class="address-line-1"
        >
          12345 Testing Way 
        </span>
      </p>
      <p
        class="address-entry"
      >
        <span
          class="locality"
        >
          Some City, 
        </span>
        <span
          class="region"
        >
          California, 
        </span>
        <span
          class="postal-code"
        >
          95555 / 
        </span>
        <span
          class="country-name"
        >
          United States 
        </span>
      </p>
    </div>
  </div>
  <div
    class="staticConsignment-items"
  >
    <strong>
      0 Items
    </strong>
    <ul />
  </div>
  <div>
    <div
      class="shippingOption shippingOption--alt shippingOption--selected"
    >
      <div
        class="shippingOption shippingOption--alt"
      >
        <span
          class="shippingOption-desc"
        >
          Flat Rate
        </span>
        <span
          class="shippingOption-price"
        />
      </div>
    </div>
  </div>
</div>
`;
